--- a/blogs/templates/blogs/blogs.html
+++ b/blogs/templates/blogs/blogs.html
@@ -60,7 +60,7 @@
         <a class="nav-link" href="https://www.linkedin.com/in/mayur-gupta-476996175">Linkdln</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% static 'Mayur_Resume.pdf' %}">Resume</a>
+        <a class="nav-link" href="{% static 'Mayur__Resume.pdf' %}">Resume</a>
       </li>
     </ul>
   </div>
